--- a/src/components/form-tags/_form-tags.scss
+++ b/src/components/form-tags/_form-tags.scss
@@ -62,9 +62,9 @@
 }
 
 .form-control-sm .b-form-tag {
-  line-height: $input-line-height-sm;
+  line-height: $input-line-height;
 }
 
 .form-control-lg .b-form-tag {
-  line-height: $input-line-height-lg;
+  line-height: $input-btn-line-height;
 }
