--- a/src/components/popover/_popover.scss
+++ b/src/components/popover/_popover.scss
@@ -17,11 +17,11 @@
 @if $bv-enable-popover-variants {
   @each $variant, $value in $theme-colors {
     .b-popover-#{$variant} {
-      $po-bg-color: theme-color-level($variant, $b-popover-bg-level);
-      $po-border-color: theme-color-level($variant, $b-popover-border-level);
-      $po-color: theme-color-level($variant, $b-popover-color-level);
+      $po-bg-color: shift-color($value, $b-popover-bg-level);
+      $po-border-color: shift-color($value, $b-popover-border-level);
+      $po-color: shift-color($value, $b-popover-color-level);
       $po-header-bg: darken($po-bg-color, 3%);
-      $po-header-color: color-yiq($po-header-bg);
+      $po-header-color: color-contrast($po-header-bg);
       $po-arrow-color: $po-bg-color;
       $po-arrow-color-bottom: $po-header-bg;
       $po-arrow-outer-color: fade-in($po-border-color, 0.05);
