--- a/src/icons.scss
+++ b/src/icons.scss
@@ -1,6 +1,7 @@
 // --- BootstrapVue Icons Custom SCSS ---
 
 // Include variables and utilities first
+@import "compat";
 @import "variables";
 @import "utilities";
 
