--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
 // mixins to be imported first
 
 // Include variables and utilities first
+@import "compat";
 @import "variables";
 @import "utilities";
 
