--- a/src/components/popover/_popover.scss
+++ b/src/components/popover/_popover.scss
@@ -32,7 +32,8 @@
       }
 
       &.bs-popover-top {
-        > .arrow {
+        > .arrow,
+        > .tooltip-arrow {
           &::before {
             border-top-color: $po-arrow-outer-color;
           }
@@ -44,7 +45,8 @@
       }
 
       &.bs-popover-right {
-        > .arrow {
+        > .arrow,
+        > .tooltip-arrow {
           &::before {
             border-right-color: $po-arrow-outer-color;
           }
@@ -56,7 +58,8 @@
       }
 
       &.bs-popover-bottom {
-        > .arrow {
+        > .arrow,
+        > .tooltip-arrow {
           &::before {
             border-bottom-color: $po-arrow-outer-color;
           }
@@ -73,7 +76,8 @@
       }
 
       &.bs-popover-left {
-        > .arrow {
+        > .arrow,
+        > .tooltip-arrow {
           &::before {
             border-left-color: $po-arrow-outer-color;
           }
